--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "firebase": "^10.13.2",
     "react": "^18.3.1",
